plans crud & api
