# routes/api.php
@@ -66,3 +66,4 @@ Route::get('old-documents', [\App\Http\Controllers\Api\OldDocumentsController::c
 Route::get('programs', [\App\Http\Controllers\Api\ProgramsController::class, 'getAll']);
 Route::get('rekvizits', [\App\Http\Controllers\Api\RekvizitsController::class, 'getAll']);
 Route::get('reception-times', [\App\Http\Controllers\Api\ReceptionTimesController::class, 'getAll']);
+Route::get('plans', [\App\Http\Controllers\Api\PlansController::class, 'getAll']);
