# routes/web.php
@@ -25,6 +25,7 @@ use App\Http\Controllers\Admin\OldDocumentsController;
 use App\Http\Controllers\Admin\ProgramsController;
 use App\Http\Controllers\Admin\RekvizitsController;
 use App\Http\Controllers\Admin\ReceptionTimesController;
+use App\Http\Controllers\Admin\PlansController;
 /*
 |--------------------------------------------------------------------------
 | Web Routes
@@ -91,6 +92,7 @@ Route::middleware(['auth'])->prefix('admin')->name('admin.')->group(function(){
     Route::resource('programs', ProgramsController::class);
     Route::resource('rekvizits', RekvizitsController::class);
     Route::resource('reception-times', ReceptionTimesController::class);
+    Route::resource('plans', PlansController::class);
 
     Route::resource('settings', 'App\Http\Controllers\Admin\SettingsController');
     Route::get('generator', ['uses' => '\Appzcoder\LaravelAdmin\Controllers\ProcessController@getGenerator'])->name('generator');
